Fix flex-container alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,12 +14,15 @@ body {
 .flex-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    align-self: stretch;
     background-color: #1F2937;
     padding: 1rem 12.5rem;
 }
@@ -31,9 +34,8 @@ body {
 
 .content1 {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    flex-grow: 1;
     background-color: #1F2937;
     padding: 6rem 12.5rem;
     gap: 6rem;
@@ -47,13 +49,13 @@ body {
 
 .content2 {
     text-align: center;
-    flex-grow: 1;
     padding: 6rem 12.5rem;
 }
 
 .image-container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     padding: 4rem;
     gap: 3rem;
 }
@@ -63,7 +65,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-grow: 1;
     padding: 6rem 25rem;
     background-color: #E5E7EB;
 }
@@ -73,9 +74,9 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #3882F6;
-    flex-grow: 1;
     padding: 4rem 6rem;
     margin: 6rem 30rem;
+    gap: 3rem;
     border-radius: 1rem;
 }
 
@@ -83,6 +84,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: stretch;
     background-color: #1F2937;
     color: #E5E7EB;
     padding: 2rem;
